--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-TELEGRAM_API_TOKEN=your_telegram_api_token
-MONGODB_URI=your_mongodb_uri
+TELEGRAM_API_TOKEN=5058249365:AAHo-3OncX6fBQTTQexaCKqhy2jCLyFUdg0
+MONGODB_URI=mongodb+srv://abc:abcd@cluster0.r9241sb.mongodb.net/?retryWrites=true&w=majority
+
