--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TELEGRAM_API_TOKEN=5058249365:AAHo-3OncX6fBQTTQexaCKqhy2jCLyFUdg0
-MONGODB_URI=mongodb+srv://abc:abcd@cluster0.r9241sb.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://abc:abcd@cluster0.s2plnpg.mongodb.net/?retryWrites=true&w=majority
 
